noinst_LTLIBRARIES = libmodule_admin.la

libmodule_admin_la_SOURCES = axis2_skel_ModuleAdminService.c \
							 codegen/adb_disengageModuleForOperation.c \
							 codegen/adb_getModuleInfo.c \
							 codegen/adb_listModulesResponse.c \
							 codegen/adb_disengageModuleForOperationResponse.c \
							 codegen/adb_getModuleInfoResponse.c \
							 codegen/adb_ModuleMetaData.c \
							 codegen/adb_disengageModuleForService.c \
							 codegen/adb_getModuleParameters.c \
							 codegen/adb_ModuleMgtException.c \
							 codegen/adb_disengageModuleForServiceGroup.c \
							 codegen/adb_ModuleMgtExceptionE0.c \
							 codegen/adb_getModuleParametersResponse.c \
							 codegen/adb_disengageModuleForServiceGroupResponse.c \
							 codegen/adb_globallyDisengageModule.c \
							 codegen/adb_removeModule.c \
							 codegen/adb_disengageModuleForServiceResponse.c \
							 codegen/adb_globallyDisengageModuleResponse.c \
							 codegen/adb_removeModuleParameter.c \
							 codegen/adb_disengageModuleFromSystem.c \
							 codegen/adb_globallyEngageModule.c \
							 codegen/adb_removeModuleParameterResponse.c \
							 codegen/adb_disengageModuleFromSystemResponse.c \
							 codegen/adb_globallyEngageModuleResponse.c \
							 codegen/adb_removeModuleResponse.c \
							 codegen/adb_engageModuleForOperation.c \
							 codegen/adb_listGloballyEngagedModulesResponse.c \
							 codegen/adb_setModuleParameters.c \
							 codegen/adb_engageModuleForOperationResponse.c \
							 codegen/adb_listModulesForOperation.c \
							 codegen/adb_uploadModule.c \
							 codegen/adb_engageModuleForService.c \
							 codegen/adb_listModulesForOperationResponse.c \
							 codegen/adb_uploadModuleResponse.c \
							 codegen/adb_engageModuleForServiceGroup.c \
							 codegen/adb_listModulesForService.c \
							 codegen/axis2_extension_mapper.c \
							 codegen/adb_engageModuleForServiceGroupResponse.c \
							 codegen/adb_listModulesForServiceGroup.c \
							 codegen/adb_listModulesForServiceGroupResponse.c \
							 codegen/axis2_svc_skel_ModuleAdminService.c \
							 codegen/adb_engageModuleForServiceResponse.c \
							 codegen/adb_Exception.c \
							 codegen/adb_listModulesForServiceResponse.c 
libmodule_admin_la_LIBADD = 

INCLUDES = -I$(top_builddir)/include \
			-I. \
			@AXIS2INC@ \
		   	@AXIOMINC@ \
		   	@NEETHIINC@ \
		   	@UTILINC@

EXTRA_DIST=
