noinst_LTLIBRARIES = liboperation_admin.la

liboperation_admin_la_SOURCES = axis2_skel_OperationAdmin.c \ 
								codegen/adb_configureMTOM.c \
								codegen/adb_getPolicyResponse.c \
								codegen/adb_listPublishedOperationsResponse.c \
								codegen/adb_getDeclaredOperationParameters.c \
								codegen/adb_listAllOperations.c \
								codegen/adb_OperationMetaData.c \
								codegen/adb_getDeclaredOperationParametersResponse.c \
								codegen/adb_listAllOperationsResponse.c \
								codegen/adb_OperationMetaDataWrapper.c \
								codegen/adb_getOperationMetaData.c \
								codegen/adb_listControlOperations.c \
								codegen/adb_removeOperationParameter.c \
								codegen/adb_getOperationMetaDataResponse.c \
								codegen/adb_listControlOperationsResponse.c \
								codegen/adb_setOperationParameters.c \
								codegen/adb_getOperationParameters.c \
								codegen/adb_listOperationPhaseHandlers.c \
								codegen/adb_setPolicy.c \
								codegen/adb_getOperationParametersResponse.c \
								codegen/adb_listOperationPhaseHandlersResponse.c \
								codegen/axis2_extension_mapper.c \
								codegen/adb_getOperationStatistics.c \
								codegen/adb_listOperationPhases.c \
								codegen/axis2_svc_skel_OperationAdmin.c \
								codegen/adb_getOperationStatisticsResponse.c \
								codegen/adb_listOperationPhasesResponse.c \
								OperationAdminService.vcprojcodegen/adb_getPolicy.c \
								codegen/adb_listPublishedOperations.c 
liboperation_admin_la_LIBADD = 

INCLUDES = -I$(top_builddir)/include \
			-I. \
			@AXIS2INC@ \
		   	@AXIOMINC@ \
		   	@NEETHIINC@ \
		   	@UTILINC@

EXTRA_DIST=
