noinst_LTLIBRARIES = libresource_admin.la

libresource_admin_la_SOURCES = axis2_skel_ResourceAdminService.c \
							   codegen/adb_addCollection.c \
							   codegen/adb_getVersionsBeanResponse.c \
							   codegen/adb_getCollectionContentResponse.c \
							   codegen/adb_addCollectionResponse.c \
							   codegen/adb_importResource.c \
							   codegen/adb_getCollectionMediatypeDefinitionsResponse.c \
							   codegen/adb_addRemoteLink.c \
							   codegen/adb_MetadataBean.c \
							   codegen/adb_getContentBean.c \
							   codegen/adb_addResource.c \
							   codegen/adb_moveResource.c \
							   codegen/adb_getContentBeanResponse.c \
							   codegen/adb_addRolePermission.c \
							   codegen/adb_PermissionBean.c \
							   codegen/adb_getContentDownloadBean.c \
							   codegen/adb_addRolePermissionResponse.c \
							   codegen/adb_PermissionEntry.c \
							   codegen/adb_getContentDownloadBeanResponse.c \
							   codegen/adb_addSymbolicLink.c \
							   codegen/adb_renameResource.c \
							   codegen/adb_getCustomUIMediatypeDefinitionsResponse.c \
							   codegen/adb_addTextResource.c \
							   codegen/adb_ResourceData.c \
							   codegen/adb_getMediatypeDefinitionsResponse.c \
							   codegen/adb_addUserPermission.c \
							   codegen/adb_ResourceServiceException.c \
							   codegen/adb_getMetadata.c \
							   codegen/adb_ResourceServiceExceptionE0.c \
							   codegen/adb_addUserPermissionResponse.c \
							   codegen/adb_getMetadataResponse.c \
							   codegen/adb_changeRolePermissions.c \
							   codegen/adb_ResourceTreeEntryBean.c \
							   codegen/adb_getPermissions.c \
							   codegen/adb_changeRolePermissionsResponse.c \
							   codegen/adb_restoreVersion.c \
							   codegen/adb_getPermissionsResponse.c \
							   codegen/adb_changeUserPermissions.c \
							   codegen/adb_setDescription.c \
							   codegen/adb_getProperty.c \
							   codegen/adb_changeUserPermissionsResponse.c \
							   codegen/adb_setSessionResourcePath.c \
							   codegen/adb_getPropertyResponse.c \
							   codegen/adb_CollectionContentBean.c \
							   codegen/adb_TagCount.c \
							   codegen/adb_getResourceData.c \
							   codegen/adb_ContentBean.c \
							   codegen/adb_updateTextContent.c \
							   codegen/adb_getResourceDataResponse.c \
							   codegen/adb_ContentDownloadBean.c \
							   codegen/adb_VersionPath.c \
							   codegen/adb_getResourceTreeEntry.c \
							   codegen/adb_copyResource.c \
							   codegen/adb_VersionsBean.c \
							   codegen/adb_getResourceTreeEntryResponse.c \
							   codegen/adb_createVersion.c \
							   codegen/adb_WebResourcePath.c \
							   codegen/adb_getSessionResourcePathResponse.c \
							   codegen/adb__delete.c \
							   codegen/axis2_extension_mapper.c \
							   codegen/adb_getTextContent.c \
							   codegen/adb_Exception.c \
							   codegen/adb_ExceptionE1.c \
							   codegen/adb_getTextContentResponse.c \
							   codegen/axis2_svc_skel_ResourceAdminService.c \
							   codegen/adb_getVersionsBean.c \
							   codegen/adb_getCollectionContent.c 
libresource_admin_la_LIBADD = 

INCLUDES = -I$(top_builddir)/include \
			-I. \
			@AXIS2INC@ \
		   	@AXIOMINC@ \
		   	@NEETHIINC@ \
		   	@UTILINC@

EXTRA_DIST=
