noinst_LTLIBRARIES = libsecurity_admin_service.la

libsecurity_admin_service_la_SOURCES = axis2_skel_SecurityAdminService.c \
									   codegen/adb_activateUsernameTokenAuthentication.c \
									   codegen/adb_getSecurityScenarioResponse.c \
									   codegen/adb_getScenariosResponse.c \
									   codegen/adb_SecurityScenarioDataWrapper.c \
									   codegen/adb_applySecurity.c \
									   codegen/adb_SecurityConfigData.c \
									   codegen/adb_getSecurityConfigData.c \
									   codegen/axis2_extension_mapper.c \
									   codegen/adb_disableSecurityOnService.c \
									   codegen/adb_SecurityConfigException.c \
									   codegen/adb_getSecurityConfigDataResponse.c \
									   codegen/adb_SecurityConfigExceptionE0.c \
									   codegen/adb_Exception.c \
									   codegen/axis2_svc_skel_SecurityAdminService.c \
									   codegen/adb_getSecurityScenario.c \
									   codegen/adb_getScenarios.c \
									   codegen/adb_SecurityScenarioData.c
libsecurity_admin_service_la_LIBADD = 

INCLUDES = -I$(top_builddir)/include \
			-I. \
			@AXIS2INC@ \
		   	@AXIOMINC@ \
		   	@NEETHIINC@ \
		   	@UTILINC@

EXTRA_DIST=
