noinst_LTLIBRARIES = libservice_admin.la

libservice_admin_la_SOURCES =   adb_Policy.c \
                                axis2_skel_ServiceAdmin.c \
								codegen/adb_AbstractPolicyOperator.c \
								codegen/adb_PolicyComponent.c \
								codegen/adb_getModulePolicyResponse.c \
								codegen/adb_addPoliciesToService.c \
								codegen/adb_getNumberOfActiveServicesResponse.c \
								codegen/adb_PolicyMetaData.c \
								codegen/adb_addTransportBinding.c \
								codegen/adb_getNumberOfFaultyServicesResponse.c \
								codegen/adb_removeBindingPolicy.c \
								codegen/adb_addTransportBindingResponse.c \
								codegen/adb_getNumberOfInactiveServicesResponse.c \
								codegen/adb_removeServiceParameter.c \
								codegen/adb_All.c \
								codegen/adb_getOperationMessagePolicy.c \
								codegen/adb_removeServicePoliciesByNamespace.c \
								codegen/adb_changeServiceState.c \
								codegen/adb_getOperationMessagePolicyResponse.c \
								codegen/adb_removeTransportBinding.c \
								codegen/adb_configureMTOM.c \
								codegen/adb_getOperationPolicy.c \
								codegen/adb_removeTransportBindingResponse.c \
								codegen/adb_deleteFaultyServiceGroup.c \
								codegen/adb_getOperationPolicyResponse.c \
								codegen/adb_ServerException.c \
								codegen/adb_deleteFaultyServiceGroupResponse.c \
								codegen/adb_ServerExceptionE1.c \
								codegen/adb_getPolicies.c \
								codegen/adb_deleteFaultyServiceGroups.c \
								codegen/adb_getPoliciesResponse.c \
								codegen/adb_ServiceGroupMetaData.c \
								codegen/adb_deleteServiceGroups.c \
								codegen/adb_getPolicy.c \
								codegen/adb_ServiceGroupMetaDataWrapper.c \
								codegen/adb_engageModuleToService.c \
								codegen/adb_getPolicyResponse.c \
								codegen/adb_ServiceMetaData.c \
								codegen/adb_Exception.c \
								codegen/adb_ExceptionE0.c \
								codegen/adb_getServiceBindings.c \
								codegen/adb_setBindingOperationMessagePolicy.c \
								codegen/adb_getServiceBindingsResponse.c \
								codegen/adb_setBindingOperationPolicy.c \
								codegen/adb_FaultyService.c \
								codegen/adb_getServiceData.c \
								codegen/adb_setBindingPolicy.c \
								codegen/adb_FaultyServicesWrapper.c \
								codegen/adb_getServiceDataResponse.c \
								codegen/adb_setModulePolicy.c \
								codegen/adb_getBindingOperationMessagePolicy.c \
								codegen/adb_getServiceParameters.c \
								codegen/adb_setPolicy.c \
								codegen/adb_getBindingOperationMessagePolicyResponse.c \
								codegen/adb_getServiceParametersResponse.c \
								codegen/adb_setServiceOperationMessagePolicy.c \
								codegen/adb_getBindingOperationPolicy.c \
								codegen/adb_getWSDL.c \
								codegen/adb_setServiceOperationPolicy.c \
								codegen/adb_getBindingOperationPolicyResponse.c \
								codegen/adb_getWSDLResponse.c \
								codegen/adb_setServiceParameters.c \
								codegen/adb_getBindingPolicy.c \
								codegen/adb_Iterator.c \
								codegen/adb_setServicePolicy.c \
								codegen/adb_getBindingPolicyResponse.c \
								codegen/adb_listServiceGroup.c \
								codegen/adb_startService.c \
								codegen/adb_getExposedTransports.c \
								codegen/adb_listServiceGroupResponse.c \
								codegen/adb_stopService.c \
								codegen/adb_getExposedTransportsResponse.c \
								codegen/adb_listServiceGroups.c \
								codegen/axis2_extension_mapper.c \
								codegen/adb_getFaultyServiceArchives.c \
								codegen/adb_listServiceGroupsResponse.c \
								codegen/adb_getFaultyServiceArchivesResponse.c \
								codegen/axis2_svc_skel_ServiceAdmin.c \
								codegen/adb_Map.c \
								codegen/adb_getModulePolicy.c
libservice_admin_la_LIBADD = 

INCLUDES = -I$(top_builddir)/include \
			-I. \
			@AXIS2INC@ \
		   	@AXIOMINC@ \
		   	@NEETHIINC@ \
		   	@UTILINC@

EXTRA_DIST=
